# TENT

./: .gitignore  CMakeLists.txt  LICENSE
doc/: overview.md
include/: BigTENT.hpp  Fold.hpp  Folding.hpp  ITENT.hpp  TENT.hpp
src/lib/: TENT.cpp
src/test/: CMakeLists.txt  compilation_test.cpp  fold_test.cpp  getsetdel_test.cpp
